XMLExper/m12/m12_532_1_tinyxml2/comparisonS.txt
tinyxml2.cpp: In member function ‘void tinyxml2::XMLDocument::DeepCopy(tinyxml2::XMLDocument*) const’:
tinyxml2.cpp:2280:77: error: cannot dynamic_cast ‘node’ (of type ‘const class tinyxml2::XMLNode*’) to type ‘class tinyxml2::XMLDeclaration*’ (conversion casts away constness)
 2280 |   target->InsertEndChild(/*PCI*/dynamic_cast<tinyxml2::XMLDeclaration*>(node)->DeepClone(target));
      |                                                                             ^
diff: tinyxml2.S: No such file or directory
